<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snd_v1.RegisterBabysitterCreate">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="336dp"
        android:layout_height="563dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createView2"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/c_createYourProfile"
                android:textSize="15pt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/c_profilepic"
                android:textSize="8pt" />

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onImageGalleryClicked"
                android:text="@string/c_upload" />

            <TextView
                android:id="@+id/bioView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_bio"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/bioText"
                android:layout_width="365dp"
                android:layout_height="61dp"
                android:ems="10"
                android:hint="@string/c_boutme"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/qualificationView"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:text="@string/c_qualifications"
                android:textSize="8pt" />

            <CheckBox
                android:id="@+id/fistAidCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/q_firstAid" />

            <CheckBox
                android:id="@+id/babysittingCertificateCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/q_babysittingCertificate" />

            <CheckBox
                android:id="@+id/cprCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/q_cpr" />

            <CheckBox
                android:id="@+id/policeCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/q_policeCheck" />

            <CheckBox
                android:id="@+id/otherCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/q_other" />

            <EditText
                android:id="@+id/otherEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/q_specify"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/experienceView"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/c_experience"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:onClick="submit"
                android:text="@string/button_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
