<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snd_v1.RegisterParentCreate">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="340dp"
        android:layout_height="571dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createView3"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/c_createYourProfile"
                android:textSize="15pt"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_profilepic"
                android:textSize="8pt" />

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:contentDescription="@string/desc"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onImageGalleryClicked"
                android:text="@string/c_upload" />


            <TextView
                android:id="@+id/bioView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/c_bio"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/bioText"
                android:layout_width="327dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/c_boutme"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/child1View"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/c_child1"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genderView"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/c_gender"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/genderDrop"
                android:layout_width="327dp"
                android:layout_height="32dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/childAgeRangeView"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/c_ageRange"
                android:textSize="8pt" />

            <Spinner
                android:id="@+id/childAgeDrop"
                android:layout_width="327dp"
                android:layout_height="32dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_addChild" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="submit"
                android:text="@string/button_submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
