<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snd_v1.ParentProfileEdit">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:onClick="Home"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Search"
            android:onClick="Search"
            android:tint="@android:color/transparent"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/PostJob"
            android:onClick="JobPost"
            app:srcCompat="@drawable/job" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@android:string/VideoView_error_button"
            android:cropToPadding="false"
            android:onClick="Profile"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/profile" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button4"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:background="@color/colorPrimary"
            android:onClick="Save"
            android:text="@string/Save"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="76dp"
            android:layout_marginStart="131dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/profileimage"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:layout_marginEnd="94dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Name"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="129dp"
            android:layout_height="41dp"
            android:layout_marginEnd="102dp"
            android:layout_marginLeft="103dp"
            android:layout_marginRight="102dp"
            android:layout_marginStart="103dp"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/address_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="255dp"
            android:layout_height="27dp"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="33dp"
            android:text="@string/c_upload"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="304dp"
            android:layout_height="84dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="9dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/Bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="152dp"
            android:layout_height="31dp"
            android:layout_marginBottom="44dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="152dp"
            android:layout_height="31dp"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="43dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spinner2"
            app:layout_constraintTop_toBottomOf="@+id/editText8" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="260dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/My_Child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText8" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>

